--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,27 @@ readme = "README.md"
 authors = [
     { name = "Matanya Loewenthal", email = "matanya@loewenthal.net" }
 ]
-requires-python = ">=3.12"
+requires-python = ">=3.10"
 dependencies = [
-    "typer>=0.14.0",
+    "bs4>=0.0.2",
+    "pydantic>=2.10.3",
+    "requests>=2.32.3",
+    "urllib3>=2.2.3",
+]
+
+[project.optional-dependencies]
+core = []
+cli = ["typer>=0.14.0"]
+
+[dependency-groups]
+dev = [
+    "pytest-cov>=6.0.0",
+    "pytest>=8.3.4",
 ]
 
 [project.scripts]
-torah-dl = "torah_dl.main:app"
-tdl = "torah_dl.main:app"
+torah-dl = "torah_dl.cli:app"
+tdl = "torah_dl.cli:app"
 
 # all formatting and linting for the whole repo goes here
 [tool.ruff]
@@ -137,3 +150,5 @@ preview = true
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+
