--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,7 @@ name = "torah-dl"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-authors = [
-    { name = "Matanya Loewenthal", email = "matanya@loewenthal.net" }
-]
+authors = [{ name = "Matanya Loewenthal", email = "matanya@loewenthal.net" }]
 requires-python = ">=3.10"
 dependencies = [
     "bs4>=0.0.2",
@@ -19,10 +17,7 @@ core = []
 cli = ["typer>=0.14.0"]
 
 [dependency-groups]
-dev = [
-    "pytest-cov>=6.0.0",
-    "pytest>=8.3.4",
-]
+dev = ["pytest-cov>=6.0.0", "pytest>=8.3.4", "ruff>=0.8.1"]
 
 [project.scripts]
 torah-dl = "torah_dl.cli:app"
@@ -116,7 +111,7 @@ preview = true
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 [tool.ruff.lint.per-file-ignores]
-"*/tests/*" = ["S101"]
+"test/*" = ["S101"]
 
 
 [tool.ruff.format]
@@ -150,5 +145,3 @@ preview = true
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-
-
