--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
 
 [project.optional-dependencies]
 core = []
-cli = ["typer>=0.14.0"]
+cli = ["typer>=0.14.0", "rich>=13.0.0"]
 
 [dependency-groups]
 dev = ["pytest-cov>=6.0.0", "pytest>=8.3.4", "ruff>=0.8.1"]
@@ -111,7 +111,7 @@ preview = true
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 [tool.ruff.lint.per-file-ignores]
-"test/*" = ["S101"]
+"test/*" = ["S101", "RUF012"]
 
 
 [tool.ruff.format]
