--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,19 +3,53 @@ name = "torah-dl"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-authors = [
-    { name = "Matanya Loewenthal", email = "matanya@loewenthal.net" }
+authors = [{ name = "Matanya Loewenthal", email = "matanya@loewenthal.net" }]
+requires-python = ">=3.10"
+classifiers = [
+    "Operating System :: OS Independent",
+    "Environment :: Console",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Software Development :: Libraries",
+    "Topic :: Software Development",
+    "Typing :: Typed",
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Religion",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "License :: OSI Approved :: MIT License",
 ]
-requires-python = ">=3.12"
 dependencies = [
+    "bs4>=0.0.2",
+    "pydantic>=2.10.3",
+    "requests>=2.32.3",
+    "urllib3>=2.2.3",
+]
+
+[project.optional-dependencies]
+core = []
+cli = ["typer>=0.14.0", "rich>=13.0.0"]
+
+[dependency-groups]
+dev = [
+    "pytest-cov>=6.0.0",
+    "pytest>=8.3.4",
+    "ruff>=0.8.1",
     "typer>=0.14.0",
+    "rich>=13.0.0",
 ]
 
 [project.scripts]
-torah-dl = "torah_dl.main:app"
-tdl = "torah_dl.main:app"
+torah-dl = "torah_dl.cli:app"
+tdl = "torah_dl.cli:app"
 
-# all formatting and linting for the whole repo goes here
+[tool.coverage.report]
+fail_under = 90
+
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
 exclude = [
@@ -91,7 +125,7 @@ select = [
     # tryceratops
     "TRY",
 ]
-ignore = ["RUF001", "B008"]
+ignore = []
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
@@ -103,7 +137,7 @@ preview = true
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 [tool.ruff.lint.per-file-ignores]
-"*/tests/*" = ["S101"]
+"test/*" = ["S101", "RUF012"]
 
 
 [tool.ruff.format]
