--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,15 @@ dev = [
     "ruff>=0.8.1",
     "typer>=0.14.0",
     "rich>=13.0.0",
+    "mkdocs-gen-files>=0.5.0",
+    "mkdocs-material>=9.5.47",
+    "pytest-clarity>=1.0.1",
+    "mike>=2.1.3",
+    "mkdocs-include-markdown-plugin>=7.1.2",
+    "mkdocstrings[python]>=0.27.0",
+    "mkdocs-literate-nav>=0.6.1",
+    "mkdocs-autorefs>=1.2.0",
+    "mkdocs-section-index>=0.3.9",
 ]
 
 [project.scripts]
