--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,7 +74,12 @@ plugins:
 nav:
   - Home: index.md
   - Manual: MANUAL.md
+  - Contributing: CONTRIBUTING.md
   - Code Reference: reference/
+
+markdown_extensions:
+  - pymdownx.tasklist:
+      custom_checkbox: true
 
 extra:
   version:
