--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dev = [
     "mkdocs-literate-nav>=0.6.1",
     "mkdocs-autorefs>=1.2.0",
     "mkdocs-section-index>=0.3.9",
+    "genbadge[coverage]>=1.1.1",
 ]
 
 [project.scripts]
