--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "License :: OSI Approved :: MIT License",
 ]
 dependencies = [
@@ -31,7 +32,6 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-core = []
 cli = ["typer>=0.14.0", "rich>=13.0.0"]
 
 [dependency-groups]
