--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,7 @@
+---
 site_name: Torah-dl Docs
-
 repo_url: https://github.com/SoferAI/torah-dl
 repo_name: SoferAI/torah-dl
-
 theme:
   name: material
   features:
@@ -16,13 +15,13 @@ theme:
     logo: material/tree
   palette:
     # Palette toggle for automatic mode
-    - media: "(prefers-color-scheme)"
+    - media: (prefers-color-scheme)
       toggle:
         icon: material/brightness-auto
         name: Switch to light mode
 
     # Palette toggle for light mode
-    - media: "(prefers-color-scheme: light)"
+    - media: '(prefers-color-scheme: light)'
       scheme: default
       primary: dark blue
       accent: dark blue
@@ -31,27 +30,24 @@ theme:
         name: Switch to dark mode
 
     # Palette toggle for dark mode
-    - media: "(prefers-color-scheme: dark)"
+    - media: '(prefers-color-scheme: dark)'
       scheme: slate
       primary: dark blue
       accent: dark blue
       toggle:
         icon: material/brightness-4
         name: Switch to system preference
-
 validation:
   links:
     absolute_links: info
     anchors: warn
     unrecognized_links: warn
-
 plugins:
   - search
   - tags
   - include-markdown
   - gen-files:
-      scripts:
-        - scripts/gen_ref_pages.py
+      scripts: [scripts/gen_ref_pages.py]
   - literate-nav:
       nav_file: SUMMARY.md
   - section-index
@@ -70,17 +66,14 @@ plugins:
             show_docstring_summary: true
             show_docstring_return: true
             heading_level: 2
-
 nav:
   - Home: index.md
   - Manual: MANUAL.md
   - Contributing: CONTRIBUTING.md
   - Code Reference: reference/
-
 markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
-
 extra:
   version:
     provider: mike
