--- a/.github/workflows/mkdocs-deploy.yml
+++ b/.github/workflows/mkdocs-deploy.yml
@@ -6,11 +6,12 @@ name: Publish docs via GitHub Pages
 
 jobs:
   deploy-dev-docs:
-    # This job runs tests on multiple Python versions (3.10, 3.11, 3.12).
     runs-on: ubuntu-22.04
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         id: setup-python
@@ -24,6 +25,20 @@ jobs:
         with:
           app-id: ${{ secrets.SOFERAI_BOT_CLIENT_ID }}
           private-key: ${{ secrets.SOFERAI_BOT_PRIVATE_SIGNING_KEY }}
+
+      - name: Get GitHub App User ID
+        id: get-user-id
+        run: echo "user-id=$(gh api "/users/${{ steps.generate-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+        env:
+          GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+
+      - id: committer
+        run: |
+          echo "bot-name=${{ steps.generate-token.outputs.app-slug }}[bot]" >> "$GITHUB_OUTPUT"
+          echo "bot-email=${{ steps.get-user-id.outputs.user-id }}+${{ steps.generate-token.outputs.app-slug }}[bot]@users.noreply.github.com" >> "$GITHUB_OUTPUT"
+      
+      - name: Set Git User
+        run: git config --global user.email "${{ steps.committer.outputs.bot-email }}" && git config --global user.name "${{ steps.committer.outputs.bot-name }}"
 
       - name: Install uv
         run: curl -LsSf https://astral.sh/uv/install.sh | sh
@@ -41,9 +56,6 @@ jobs:
 
       - name: Install project
         run: uv sync --frozen
-
-      - name: Set Git User
-        run: git config --global user.email "sofer-ai-bot@sofer.ai" && git config --global user.name "sofer-ai-bot"
 
       - name: Pull from GitHub
         run: git fetch --all
