--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ classifiers = [
 ]
 dependencies = [
     "bs4>=0.0.2",
+    "defusedxml>=0.7.1",
     "pydantic>=2.10.3",
     "requests>=2.32.3",
     "urllib3>=2.2.3",
