--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -63,37 +63,24 @@ jobs:
         run: uvx ${{ matrix.linter }} .
 
   test:
-    # This job runs tests on multiple Python versions (3.10, 3.11, 3.12).
-    runs-on: ubuntu-22.04
+    needs: [format, lint]
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12", "3.13"]
+        os: ["ubuntu-24.04", "macos-14", "windows-2022"]
+    runs-on: ${{ matrix.os }}
     steps:
-      - name: Check out repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        id: setup-python
-        uses: actions/setup-python@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
         with:
+          enable-cache: true
           python-version: ${{ matrix.python-version }}
 
-      - name: Install uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
-
-      - name: Load cached venv
-        id: cached-poetry-dependencies
-        uses: actions/cache@v4
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/uv.lock') }}
-
-      - name: Install Dependencies
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: uv sync --frozen --no-install-project
-
-      - name: Install project
-        run: uv sync --frozen
+      - name: Install the project
+        run: uv sync --all-extras --dev
 
       - name: Run Pytest
         run: |
