feat: add torahdownloads.org

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -46,7 +46,7 @@ tasks:
     desc: Run the tests
     aliases: [t]
     cmds:
-      - uv run pytest -vv -s --cov=torah_dl  # --cov-report html
+      - uv run pytest -vv -s --cov=torah_dl --cov-report html
   docs:
     desc: Generate the documentation
     cmds:
