--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.4.0"
 description = "Add your description here"
 readme = "README.md"
 authors = [{ name = "Matanya Loewenthal", email = "matanya@loewenthal.net" }]
+# can't use 3.9 bc of | operand type
 requires-python = ">=3.10"
 classifiers = [
     "Operating System :: OS Independent",
@@ -26,10 +27,10 @@ classifiers = [
 ]
 dependencies = [
     "bs4>=0.0.2",
-    "defusedxml>=0.7.1",
-    "pydantic>=2.10.3",
-    "requests>=2.32.3",
-    "urllib3>=2.2.3",
+    "defusedxml>=0.6.0",
+    "pydantic>=2.0",
+    "requests>=2.0",
+    "urllib3>=2.0",
 ]
 
 [project.optional-dependencies]
@@ -45,19 +46,20 @@ dev = [
     "mkdocs-gen-files>=0.5.0",
     "mkdocs-material>=9.5.47",
     "pytest-clarity>=1.0.1",
-    "mike>=2.1.3",
     "mkdocs-include-markdown-plugin>=7.1.2",
     "mkdocstrings[python]>=0.27.0",
     "mkdocs-literate-nav>=0.6.1",
     "mkdocs-autorefs>=1.2.0",
     "mkdocs-section-index>=0.3.9",
     "genbadge[coverage]>=1.1.1",
-    "yamlfix>=1.17.0",
 ]
 
 [project.scripts]
 torah-dl = "torah_dl.cli:app"
 tdl = "torah_dl.cli:app"
+
+[tool.uv]
+resolution = "lowest-direct"
 
 [tool.coverage.report]
 fail_under = 85
