chore: limit paths for ci run

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,7 +9,11 @@ name: Continuous Integration
 "on":
   push:
     branches: ["main"]
+    paths:
+      - "**/*.py"
   pull_request:
+    paths:
+      - "**/*.py"
   release:
     types: [published]
 
