chore: renovate automerge

--- a/renovate.json5
+++ b/renovate.json5
@@ -9,8 +9,10 @@
   },
   "packageRules": [
     {
-      "matchDepTypes": [
-        "devDependencies"
+      "matchDatasources": [
+        "github-runners",
+        "github-actions",
+        "hermit"
       ],
       "automerge": true
     }
