--- a/.github/workflows/mkdocs-deploy.yml
+++ b/.github/workflows/mkdocs-deploy.yml
@@ -30,20 +30,29 @@ jobs:
 
       - name: Get GitHub App User ID
         id: get-user-id
-        run: echo "user-id=$(gh api "/users/${{ steps.generate-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
         env:
           GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+          APP_SLUG: ${{ steps.generate-token.outputs.app-slug }}
+        run: echo "user-id=$(gh api "/users/$APP_SLUG[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
 
       - id: committer
+        env:
+          APP_SLUG: ${{ steps.generate-token.outputs.app-slug }}
+          USER_ID: ${{ steps.get-user-id.outputs.user-id }}
         run: |
-          echo "bot-name=${{ steps.generate-token.outputs.app-slug }}[bot]" >> "$GITHUB_OUTPUT"
-          echo "bot-email=${{ steps.get-user-id.outputs.user-id }}+${{ steps.generate-token.outputs.app-slug }}[bot]@users.noreply.github.com" >> "$GITHUB_OUTPUT"
+          echo "bot-name=\"$APP_SLUG[bot]\"" >> "$GITHUB_OUTPUT"
+          echo "bot-email=\"$USER_ID+$APP_SLUG[bot]@users.noreply.github.com\"" >> "$GITHUB_OUTPUT"
       
       - name: Set Git User
-        run: git config --global user.email "${{ steps.committer.outputs.bot-email }}" && git config --global user.name "${{ steps.committer.outputs.bot-name }}"
+        env:
+          BOT_EMAIL: ${{ steps.committer.outputs.bot-email }}
+          BOT_NAME: ${{ steps.committer.outputs.bot-name }}
+          GH_TOKEN: ${{ steps.generate-token.outputs.token }}
+        run: |
+          git config --global user.email "${BOT_EMAIL//\"}"
+          git config --global user.name "${BOT_NAME//\"}"
+          git config --global url.https://${GH_TOKEN}@github.com/.insteadOf https://github.com/
 
-      - name: Set Git URL
-        run: git config --global url.https://${{ steps.generate-token.outputs.token }}@github.com/.insteadOf https://github.com/
 
       - name: Install uv
         uses: astral-sh/setup-uv@v5
