--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,8 @@ dev = [
     "mkdocs-autorefs>=1.2.0",
     "mkdocs-section-index>=0.3.9",
     "genbadge[coverage]>=1.1.1",
+    "pytest-rerunfailures>=15.1",
+    # "pytest-random-order>=0.4.3",
 ]
 
 [project.scripts]
