--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-cli = ["typer>=0.14.0", "rich>=13.0.0"]
+cli = ["typer>=0.16.0", "rich>=13.0.0"]
 
 [dependency-groups]
 dev = [
@@ -43,6 +43,7 @@ dev = [
     "ruff>=0.8.1",
     "typer>=0.14.0",
     "rich>=13.0.0",
+    "click>=8.0.0,<8.2.0",
     "mkdocs-gen-files>=0.5.0",
     "mkdocs-material>=9.5.47",
     "pytest-clarity>=1.0.1",
@@ -52,6 +53,8 @@ dev = [
     "mkdocs-autorefs>=1.2.0",
     "mkdocs-section-index>=0.3.9",
     "genbadge[coverage]>=1.1.1",
+    "pytest-rerunfailures>=15.1",
+    # "pytest-random-order>=0.4.3",
 ]
 
 [project.scripts]
