fix: conventional commits

--- a/.github/workflows/conventional-pr.yaml
+++ b/.github/workflows/conventional-pr.yaml
@@ -12,15 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Generate a token
-        id: generate-token
-        uses: actions/create-github-app-token@v2
-        with:
-          app-id: ${{ secrets.SOFERAI_BOT_CLIENT_ID }}
-          private-key: ${{ secrets.SOFERAI_BOT_PRIVATE_SIGNING_KEY }}
       - uses: CondeNast/conventional-pull-request-action@v0.2.0
         env:
-          GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           # to override config-conventional rules, specify a relative path to your rules module, actions/checkout is required for this setting!
           # commitlintRulesPath: './commitlint.rules.js' # default: undefined
